# beebee

./: .gitignore
agents/contract/: pyproject.toml
agents/reporter/: pyproject.toml
agents/research/: pyproject.toml
agents/research/src/core/factory/: agent.py
agents/research/src/core/graph/: bedlock.py  gemini.py
agents/research/src/core/tool/: tavily.py
agents/research/src/core/workflow/: crawler.py
agents/research/src/infrastructure/dataset/: dataset.py
agents/research/src/infrastructure/evaluation/: evaluator.py
app/client/: package-lock.json
apps/backend/: pyproject.toml
apps/backend/services/alarm/: pyproject.toml
apps/backend/services/payment/: pyproject.toml
apps/backend/services/user/: pyproject.toml
apps/web/: package-lock.json  package.json  vite.config.ts
apps/web/src/: global.d.ts  main.tsx
apps/web/src/components/: Content.tsx  Layout.tsx
apps/web/src/components/navigation/: Footer.tsx  Header.tsx  Sidebar.tsx
engine/search/: .env  pyproject.toml
engine/v1/beebee-v1/: pyproject.toml  pyrightconfig.json
engine/v1/beebee-v1/src/: bootstrap.py  main.py
engine/v1/beebee-v1/src/core/chains/embedder/: embedder.py
engine/v1/beebee-v1/src/core/chains/ingestor/: ingestor.py
engine/v1/beebee-v1/src/core/chains/search/: search.py
engine/v1/beebee-v1/src/core/model/: common.py
engine/v1/beebee-v1/src/core/pipeline/: pipeline.py
engine/v1/beebee-v1/src/infrastructure/ollama/: ollama_config.py
infrastructure/composes/: compose-backend.yml  compose-llm.yml
infrastructure/provisioner/: go.mod
(+4 files in other folders)
