[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-tavily>=0.2.1",
    "langchain[anthropic,aws,google-genai,openai]>=0.3.25",
    "langgraph>=0.4.8",
    "uvicorn[standard]>=0.34.3",
]
